# libpqxx_test

./: CMakeLists.txt  CMakePresets.json
common_include/: CConfig.h
config/: subproject2.yaml
subproject1/src/: main.cpp  test.cpp
subproject2/: CMakeLists.txt
subproject2/src/: main.cpp
